--- a/19 - Webcam Fun/package.json
+++ b/19 - Webcam Fun/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.12.5 <2.23.2"
+    "browser-sync": "^2.26.7"
   },
   "dependencies": {
-    "hoek": "^5.0.3"
+    "axios": "^0.19.2",
+    "hoek": "^6.1.3",
+    "mime": "^2.4.4",
+    "npm": "^6.14.4"
   }
 }
