--- a/21 - Geolocation/package.json
+++ b/21 - Geolocation/package.json
@@ -9,9 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.12.5 <2.23.2"
+    "browser-sync": "^2.26.5"
   },
   "dependencies": {
-    "hoek": "^5.0.3"
+    "axios": "^0.19.0",
+    "hoek": "^6.1.3"
   }
 }
